--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 notebooks/.ipynb_checkpoints/0.0 Course Title and Information-checkpoint.ipynb
 notebooks/.ipynb_checkpoints/0.1 Course Toolkit and Reference Materials-checkpoint.ipynb
 notebooks/.ipynb_checkpoints/Sample Datasets-checkpoint.ipynb
+notebooks/.ipynb_checkpoints/MySQL Sample-checkpoint.ipynb
