--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ notebooks/.ipynb_checkpoints/0.0 Course Title and Information-checkpoint.ipynb
 notebooks/.ipynb_checkpoints/0.1 Course Toolkit and Reference Materials-checkpoint.ipynb
 notebooks/.ipynb_checkpoints/Sample Datasets-checkpoint.ipynb
 notebooks/.ipynb_checkpoints/MySQL Sample-checkpoint.ipynb
+code/R/R.Rproj
+code/R/.Rproj.user/*
+
+code/R/.Rhistory
