Added Customer Arrival Notebook and data.

--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,6 @@ ToolsForDataAnalyticsAndModeling.Rproj
 .Rproj.user/*
 .spyproject/*
 *.pyc
+data/arrival_data/*
 data/~$Miscellaneous Datasets.xlsx
 notebooks/first_figure.png
