Setting up the R project on my notebook
and adding a comment.

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ ToolsForDataAnalyticsAndModeling.Rproj
 data/arrival_data/*
 data/~$Miscellaneous Datasets.xlsx
 notebooks/first_figure.png
+.Rproj.user
