--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,7 @@ notebooks/first_figure.png
 .Rproj.user
 .RData
 code/R/Notebook With Other Languages.nb.html
+code/R/Notebook-With-Other-Languages.log
+code/R/Notebook-With-Other-Languages.pdf
+code/R/Sample R Notebook.nb.html
+code/R/Sample-R-Notebook.pdf
