Fixed data path problem
And added Spyder project to gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ code/R/Notebook-With-Other-Languages.pdf
 code/R/Sample R Notebook.nb.html
 code/R/Sample-R-Notebook.pdf
 code/R/KC Real Estate Assignment.nb.html
+code/python/.spyproject
